added user profile + upload

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,11 +2,18 @@
 <html>
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
   </head>
   <body>
     <h1>Home Page</h1>
     <form action="/vr">
       <input type="submit" value="View Sample App" />
     </form>
+    <!--<a-scene>
+      <a-assets>
+        <img id="sky" src="assets/gazebo.jpg">
+      </a-assets>
+      <a-sky src="#sky"></a-sky>
+    </a-scene>-->
   </body>
 </html>
