--- a/views/user.ejs
+++ b/views/user.ejs
@@ -2,14 +2,15 @@
 <html>
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js">
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
     <script src="js/user.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="css/user.css">
   </head>
-  <body onload="init();">
+  <body>
     <nav class="navbar navbar-default navbar-inverse" role="navigation">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -82,13 +83,14 @@
     <!-- user tabs: vrs, upload, details -->
     <div id="contentDiv">
       <div class="tab">
-        <button class="tablinks" onclick="openTab(event, 'vrtab')">My VRs</button>
-        <button class="tablinks" onclick="openTab(event, 'uptab')">Upload</button>
-        <button class="tablinks" onclick="openTab(event, 'setab')">Settings</button>
+        <button class="tablinks active" onclick="openTab(event, 'vrtab')">VRs</button>
+        <button class="tablinks loggedInOnly" onclick="openTab(event, 'uptab')">Upload</button>
+        <button class="tablinks loggedInOnly" onclick="openTab(event, 'setab')">Settings</button>
       </div>
 
       <div id="vrtab" class="tabcontent">
         <h2>My Virtual Realities</h2>
+        <table id="vrtable"></table>
       </div>
 
       <div id="uptab" class="tabcontent">
@@ -101,10 +103,15 @@
           <br/><input type="file" name="fileInput" id="fileInput" onchange="enableSubmit();"/><br/>
           <input id="fileSubmit" type="submit" value="Upload File" disabled />
         </form>
+        <span id="uploadSuccessSpan">File Upload Successful!</span>
       </div>
 
       <div id="setab" class="tabcontent">
         <h2>My Settings</h2>
+        <br/>
+        <p class="pSettings">Name: <span id="spnName" class="sSettings"></span></p>
+        <p class="pSettings">Username: <span id="spnUsername" class="sSettings"></span></p>
+        <p class="pSettings">Email address: <span id="spnEmail" class="sSettings"></span></p>
       </div>
     </div>
   </body>
