added VR click events to user profile

--- a/views/vr.ejs
+++ b/views/vr.ejs
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
+    <script src="js/vr.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="css/vr.css">
   </head>
   <body>
     <h1>VR Page</h1>
@@ -14,5 +21,6 @@
         <a-sky color="#ECECEC"></a-sky>
       </a-scene>
     </div>
+    <div id="test"></div>
   </body>
 </html>
