--- a/views/user.ejs
+++ b/views/user.ejs
@@ -26,9 +26,9 @@
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <form class="navbar-form navbar-left" role="search">
+          <form class="navbar-form navbar-left" role="search" action="/search/findVal" method="post">
             <div class="form-group">
-              <input id="searchField" type="text" class="form-control" placeholder="Search">
+              <input id="searchField" name="searchField" type="text" class="form-control" placeholder="Search">
             </div>
             <button type="submit" class="btn btn-default">Submit</button>
           </form>
