--- a/views/vr.ejs
+++ b/views/vr.ejs
@@ -87,7 +87,7 @@
         <div id="details">
           <div id="dtCol1"><h3></h3></div>
           <div id="dtCol2">
-            <h3>
+            <h3 id="likeh3" onclick="addLike();">
               <span></span>
               <i id="regThumb" class="far fa-thumbs-up"></i>
               <i id="sldThumb" class="fas fa-thumbs-up" style="display:none;"></i>
