--- a/views/landingpage.ejs
+++ b/views/landingpage.ejs
@@ -1,24 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Virtual Reality</title>
-	<meta charset="utf-8">
-
-
-	 <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
-	 <script src="https://unpkg.com/aframe-environment-component/dist/aframe-environment-component.min.js"></script>
+  <title>Virtual Reality</title>
+  <meta charset="utf-8">
+  <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
+  <script src="https://unpkg.com/aframe-environment-component/dist/aframe-environment-component.min.js"></script>
      
-	 <link rel = "stylesheet" href = "css/landingstyle.css">
-	 <link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-	
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-     <script src = "jQuery.js" type = 'text/javascript'></script>
-     
-     
+  <link rel = "stylesheet" href = "css/landingstyle.css">
+  <link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>        
 </head>
 <body background = "assets/background.jpg">
-	<nav class="navbar navbar-default navbar-inverse" role="navigation">
+  <nav class="navbar navbar-default navbar-inverse" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -36,128 +31,104 @@
       <ul class="nav navbar-nav">
         <li><a href="https://vr.google.com"><img src="assets/GoogleVR.jpg"  height = 25  width = 30 scale="0"> Google VR</a></li>
         <li><a href="https://unity3d.com"> <img src="assets/unity3D.jpg"  height = 25  width = 60 scale="0">  </a></li>
-          
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"> More Resources <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
       </ul>
       <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
+          <input id="searchbar" type="text" class="form-control" placeholder="Search">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><p class="navbar-text">Already have an account?</p></li>
+        <!--<li><p class="navbar-text">Already have an account?</p></li>-->
         <li class="dropdown">
-        	 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Sign Up</b> <span class="caret"></span></a>
-        	 <ul id="login-dp" class="dropdown-menu">
-				<li>
-					 <div class="row">
-							<div class="col-md-12">
-								
-								<div class="social-buttons">
-									<a href="www.facebook.com/Login" class="btn btn-fb"><i class="fa fa-facebook"></i> Facebook</a>
-									<a href="www.twitter.com" class="btn btn-tw"><i class="fa fa-twitter"></i> Twitter</a>
-								</div>
-                                
-								 <form class="form"  action = "/signup" method = "POST" accept-charset="UTF-8">
-								 	   <div class="form-group">
-											
-											 <input type="firstname"  name = "firstname" class="form-control" id="firstname" placeholder="First Name">
-                                             
-										</div>
-										 <div class="form-group">
-											
-											 <input type="lastname"  name = "lastname" class="form-control" id="lastname" placeholder="Last Name">
-                                             
-										</div>
-										
-										<div class="form-group">
-											
-											 <input type="username"  name = "username" class="form-control" id="username" placeholder="User Name">
-                                             
-										</div>
-										<div class="form-group">
-											
-											 <input type="email"  name = "email" class="form-control" id="email" placeholder="Email">
-                                             
-										</div>
-										<div class="form-group">
-											
-											 <input type="password"  name = "password" class="form-control" id="password" placeholder="Password">
-                                             
-										</div>
-										
-										
-										<div class="form-group">
-											 <button type="submit" id = "sign_up_button" class="btn btn-primary btn-block">Sign Up</button>
-										</div>
-										<div class="checkbox">
-											 <label>
-											 <input type="checkbox"> keep me logged-in
-											 </label>
-										</div>
-								 </form>
-							</div>
-							<div class="bottom text-center">
-								Want to upgrade plan? <a href="#"><b>Join Us</b></a>
-							</div>
-					 </div>
+           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Sign Up</b> <span class="caret"></span></a>
+           <ul id="login-dp" class="dropdown-menu">
+             <li>
+               <div class="row">
+                  <div class="col-md-12">
+                                    
+                     <form class="form"  action = "/users/signup" method = "POST" accept-charset="UTF-8">
+                          <div class="form-group">
+                          
+                           <input type="firstname"  name = "firstname" class="form-control" id="firstname" placeholder="First Name" required>
+                                                 
+                        </div>
+                         <div class="form-group">
+                          
+                           <input type="lastname"  name = "lastname" class="form-control" id="lastname" placeholder="Last Name" required>
+                                                 
+                        </div>
+                        
+                        <div class="form-group">
+                          
+                           <input type="username"  name = "username" class="form-control" id="username" placeholder="User Name" required>
+                                                 
+                        </div>
+                        <div class="form-group">
+                          
+                           <input type="email"  name = "email" class="form-control" id="email" placeholder="Email" required>
+                                                 
+                        </div>
+                        <div class="form-group">
+                          
+                           <input type="password"  name = "password" class="form-control" id="password" placeholder="Password" required>
+                                                 
+                        </div>
+                        
+                        
+                        <div class="form-group">
+                           <button type="submit" id = "sign_up_button" class="btn btn-primary btn-block">Sign Up</button>
+                        </div>
+                        <!--<div class="checkbox">
+                           <label>
+                           <input type="checkbox"> keep me logged-in
+                           </label>
+                        </div>-->
+                     </form>
+                  </div>
+                  <!--<div class="bottom text-center">
+                    Want to upgrade plan? <a href="#"><b>Join Us</b></a>
+                  </div>-->
+               </div>
 
-				</li>
-			</ul>
+            </li>
+          </ul>
 
         </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
-			<ul id="login-dp" class="dropdown-menu">
-				<li>
-					 <div class="row">
-							<div class="col-md-12">
-								
-								<div class="social-buttons">
-									<a href="www.facebook.com/Login" class="btn btn-fb"><i class="fa fa-facebook"></i> Facebook</a>
-									<a href="www.twitter.com" class="btn btn-tw"><i class="fa fa-twitter"></i> Twitter</a>
-								</div>
-                                
-								 <form class="form"  action = "/login" method = "POST" accept-charset="UTF-8">
-										<div class="form-group">
-											 <label class="sr-only" for="exampleInputEmail2">Email address</label>
-											 <input type="email" name = "email" class="form-control" id="exampleInputEmail2" placeholder="Email address" required>
-										</div>
-										<div class="form-group">
-											 <label class="sr-only" for="exampleInputPassword2">Password</label>
-											 <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password" required pattern = "[A-Z]{3}[0-9]{4}">
-                                             <div class="help-block text-right"><a href="">Forget the password ?</a></div>
-										</div>
-										<div class="form-group">
-											 <button type="submit" id = "sign_in_button" class="btn btn-primary btn-block">Sign in</button>
-										</div>
-										
-										<div class="checkbox">
-											 <label>
-											 <input type="checkbox"> keep me logged-in
-											 </label>
-										</div>
-								 </form>
-							</div>
-							<div class="bottom text-center">
-								New here ? <a href="#"><b>Join Us</b></a>
-							</div>
-					 </div>
+          <ul id="login-dp" class="dropdown-menu">
+            <li>
+               <div class="row">
+                  <div class="col-md-12">      
+                     <form class="form"  action = "/users/login" method = "POST" accept-charset="UTF-8">
+                        <div class="form-group">
+                           <label class="sr-only" for="exampleInputEmail2">Email address</label>
+                           <input type="text" name = "username2" class="form-control" id="username2" placeholder="Username" required>
+                        </div>
+                        <div class="form-group">
+                           <label class="sr-only" for="exampleInputPassword2">Password</label>
+                           <input type="password" class="form-control" id="password2" name="password2" placeholder="Password" required>
+                                                 <div class="help-block text-right"><a href="#">Forgot your password?</a></div>
+                        </div>
+                        <div class="form-group">
+                           <button type="submit" id = "sign_in_button" class="btn btn-primary btn-block">Sign in</button>
+                        </div>
+                        
+                        <!--<div class="checkbox">
+                           <label>
+                           <input type="checkbox"> keep me logged-in
+                           </label>
+                        </div>-->
+                     </form>
+                  </div>
+                  <!--<div class="bottom text-center">
+                    New here ? <a href="#"><b>Join Us</b></a>
+                  </div>-->
+               </div>
 
-				</li>
-			</ul>
+            </li>
+          </ul>
         </li>
       </ul>
     </div><!-- /.navbar-collapse -->
@@ -169,56 +140,56 @@
 
 
 
-		<div class="container_carousel">
-			 
-			  <div id="myCarousel" class="carousel slide" data-ride="carousel">
-			   
-				    <ol class="carousel-indicators">
-				      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-				      <li data-target="#myCarousel" data-slide-to="1"></li>
-				      <li data-target="#myCarousel" data-slide-to="2"></li>
-				    </ol>
+    <div class="container_carousel">
+       
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+         
+            <ol class="carousel-indicators">
+              <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+              <li data-target="#myCarousel" data-slide-to="1"></li>
+              <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol>
 
-			    <div class="carousel-inner">
-			      <div class="item active">
-			        <img src="assets/game.jpg" alt="Los Angeles" style="width:100%;">
-			        <div class = "carousel-caption">
-			        	 <h3> Virtual Reality Experience </h3>
-			        	 <p> Immerse yourself </p>
+          <div class="carousel-inner">
+            <div class="item active">
+              <img src="assets/game.jpg" alt="Los Angeles" style="width:100%;">
+              <div class = "carousel-caption">
+                 <h3> Virtual Reality Experience </h3>
+                 <p> Immerse yourself </p>
 
-			        </div>
-			      </div>
+              </div>
+            </div>
 
-			      <div class="item">
-			        <img src="assets/origin.jpg" alt="Chicago" style="width:100%;">
-			        <div class = "carousel-caption">
-			        	 <h3> Ptolemaic period (49–47 BC), Egypt </h3>
-			        	 <p> Travel back to history. </p>
+            <div class="item">
+              <img src="assets/origin.jpg" alt="Chicago" style="width:100%;">
+              <div class = "carousel-caption">
+                 <h3> Ptolemaic period (49–47 BC), Egypt </h3>
+                 <p> Travel back to history. </p>
 
-			        </div>
-			      </div>
-			    
-			      <div class="item">
-			        <img src="assets/star war.jpg" alt="New york" style="width:100%;">
-			        <div class = "carousel-caption">
-			        	 <h3> Most popular sci-fi franchise </h3>
-			        	 <p> Star Wars </p>
+              </div>
+            </div>
+          
+            <div class="item">
+              <img src="assets/star war.jpg" alt="New york" style="width:100%;">
+              <div class = "carousel-caption">
+                 <h3> Most popular sci-fi franchise </h3>
+                 <p> Star Wars </p>
 
-			        </div>
-			      </div>
-			    </div>
+              </div>
+            </div>
+          </div>
 
-			  
-			    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-			      <span class="glyphicon glyphicon-chevron-left"></span>
-			      <span class="sr-only">Previous</span>
-			    </a>
-			    <a class="right carousel-control" href="#myCarousel" data-slide="next">
-			      <span class="glyphicon glyphicon-chevron-right"></span>
-			      <span class="sr-only">Next</span>
-			    </a>
-			  </div>
-	</div>
+        
+          <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#myCarousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+  </div>
 
 
 
@@ -253,10 +224,10 @@
 
 <div style="height:500px;width:100%;">
      <a-scene embedded>
-	      <a-assets>
-	        <img id="sky" src="assets/london.jpg">
-	      </a-assets>
-	      <a-sky src="#sky"></a-sky>
+        <a-assets>
+          <img id="sky" src="assets/london.jpg">
+        </a-assets>
+        <a-sky src="#sky"></a-sky>
       </a-scene>
  </div>
 
@@ -265,34 +236,34 @@
  
     
 <div class = "well">
-	<div id="contact" class="container-fluid bg-grey">
+  <div id="contact" class="container-fluid bg-grey">
 
-	  <h2 id ="contact_header">CONTACT</h2>
-	  <div class="row">
-	    <div class="col-sm-5">
-	      <p>Contact us and we'll get back to you within 24 hours.</p>
-	      <p><span class="glyphicon glyphicon-map-marker"></span>1 Washington Sq, San Jose, CA, United States</p>
-	      <p><span class="glyphicon glyphicon-phone"></span> +1 (800) 442–4000</p>
-	      <p><span class="glyphicon glyphicon-envelope"></span> San_Jose_State_VR.com</p>
-	    </div>
-	    <div class="col-sm-7 slideanim">
-	      <div class="row">
-	        <div class="col-sm-6 form-group">
-	          <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
-	        </div>
-	        <div class="col-sm-6 form-group">
-	          <input class="form-control" id="contact_email" name="contact_email" placeholder="Email" type="email" required>
-	        </div>
-	      </div>
-	      <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea><br>
-	      <div class="row">
-	        <div class="col-sm-12 form-group">
-	          <button class="btn btn-default pull-right" type="submit">Send</button>
-	        </div>
-	      </div>
-	    </div>
-	  </div>
-	</div>
+    <h2 id ="contact_header">CONTACT</h2>
+    <div class="row">
+      <div class="col-sm-5">
+        <p>Contact us and we'll get back to you within 24 hours.</p>
+        <p><span class="glyphicon glyphicon-map-marker"></span>1 Washington Sq, San Jose, CA, United States</p>
+        <p><span class="glyphicon glyphicon-phone"></span> +1 (800) 442–4000</p>
+        <p><span class="glyphicon glyphicon-envelope"></span> San_Jose_State_VR.com</p>
+      </div>
+      <div class="col-sm-7 slideanim">
+        <div class="row">
+          <div class="col-sm-6 form-group">
+            <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
+          </div>
+          <div class="col-sm-6 form-group">
+            <input class="form-control" id="contact_email" name="contact_email" placeholder="Email" type="email" required>
+          </div>
+        </div>
+        <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea><br>
+        <div class="row">
+          <div class="col-sm-12 form-group">
+            <button class="btn btn-default pull-right" type="submit">Send</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 
