added support for robots.txt and fixed register bug

--- a/views/landingpage.ejs
+++ b/views/landingpage.ejs
@@ -3,6 +3,7 @@
 <head>
   <title>Virtual Reality</title>
   <meta charset="utf-8">
+  <meta name="description" content="Virtual reality website upload download share VR">
   <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
   <script src="https://unpkg.com/aframe-environment-component/dist/aframe-environment-component.min.js"></script>
      
