--- a/views/landingpage.ejs
+++ b/views/landingpage.ejs
@@ -33,9 +33,9 @@
         <li><a href="https://vr.google.com"><img src="assets/GoogleVR.jpg"  height = 25  width = 30 scale="0"> Google VR</a></li>
         <li><a href="https://unity3d.com"> <img src="assets/unity3D.jpg"  height = 25  width = 60 scale="0">  </a></li>
       </ul>
-      <form class="navbar-form navbar-left" role="search">
+      <form class="navbar-form navbar-left" role="search" action="/search/findVal" method="post">
         <div class="form-group">
-          <input id="searchbar" type="text" class="form-control" placeholder="Search">
+          <input id="searchField" name="searchField" type="text" class="form-control" placeholder="Search">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
