--- a/views/landingpage.ejs
+++ b/views/landingpage.ejs
@@ -11,7 +11,74 @@
   <link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>        
+  <script src = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>   
+  <style>
+       #map {
+        height: 400px;
+        width: 100%;
+       }
+
+       /* Popup box BEGIN */
+.hover_bkgr_fricc{
+    background:rgba(0,0,0,.4);
+    cursor:pointer;
+    display:none;
+    height:100%;
+    position:fixed;
+    text-align:center;
+    top:0;
+    width:100%;
+    z-index:10000;
+}
+.hover_bkgr_fricc .helper{
+    display:inline-block;
+    height:100%;
+    vertical-align:middle;
+}
+.hover_bkgr_fricc > div {
+    background-color: #fff;
+    box-shadow: 10px 10px 60px #555;
+    display: inline-block;
+    height: auto;
+    max-width: 551px;
+    min-height: 100px;
+    vertical-align: middle;
+    width: 60%;
+    position: relative;
+    border-radius: 8px;
+    padding: 15px 5%;
+}
+.popupCloseButton {
+    background-color: #fff;
+    border: 3px solid #999;
+    border-radius: 50px;
+    cursor: pointer;
+    display: inline-block;
+    font-family: arial;
+    font-weight: bold;
+    position: absolute;
+    top: -20px;
+    right: -20px;
+    font-size: 25px;
+    line-height: 30px;
+    width: 30px;
+    height: 30px;
+    text-align: center;
+}
+.popupCloseButton:hover {
+    background-color: #ccc;
+}
+.trigger_popup_fricc {
+    cursor: pointer;
+    font-size: 20px;
+    margin: 20px;
+    display: inline-block;
+    font-weight: bold;
+}
+/* Popup box BEGIN */
+
+    </style>
+     
 </head>
 <body background = "assets/background.jpg">
   <nav class="navbar navbar-default navbar-inverse" role="navigation">
@@ -221,6 +288,8 @@
       </div>
     </div>
   </div><br>
+  
+
 
 
 <div style="height:500px;width:100%;">
@@ -232,6 +301,22 @@
       </a-scene>
  </div>
 
+<div id="map"></div>
+    <script>
+      function initMap() {
+        var uluru = {lat: 37.7749, lng: -122.4194};
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 16,
+          center: uluru
+        });
+        var marker = new google.maps.Marker({
+          position: uluru,
+          map: map
+        });
+      }
+    </script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBAO5uKe5O0cPb0C4ryfvA5vMGVpLARcVA&callback=initMap"></script>
+
 
  
  
@@ -241,12 +326,13 @@
 
     <h2 id ="contact_header">CONTACT</h2>
     <div class="row">
-      <div class="col-sm-5">
+      <div class="col-sm-5" style="z-index:10;">
         <p>Contact us and we'll get back to you within 24 hours.</p>
         <p><span class="glyphicon glyphicon-map-marker"></span>1 Washington Sq, San Jose, CA, United States</p>
         <p><span class="glyphicon glyphicon-phone"></span> +1 (800) 442–4000</p>
         <p><span class="glyphicon glyphicon-envelope"></span> San_Jose_State_VR.com</p>
       </div>
+   
       <div class="col-sm-7 slideanim">
         <div class="row">
           <div class="col-sm-6 form-group">
@@ -261,6 +347,7 @@
           <div class="col-sm-12 form-group">
             <button class="btn btn-default pull-right" type="submit">Send</button>
           </div>
+
         </div>
       </div>
     </div>
@@ -268,6 +355,32 @@
 </div>
 
 
+<a class="trigger_popup_fricc"><button type="button" class="btn btn-success">Chat Bot</button></a>
+
+<div class="hover_bkgr_fricc">
+    <span class="helper"></span>
+    <div>
+        <div class="popupCloseButton">X</div>
+        <iframe
+    width="350"
+    height="430"
+    src="https://console.dialogflow.com/api-client/demo/embedded/37b30122-b99a-4b42-81cb-5d2da4d2d196">
+</iframe>
+    </div>
+</div>
+<script>
+$(document).ready(function () {
+    $(".trigger_popup_fricc").click(function(){
+       $('.hover_bkgr_fricc').show();
+    });
+    $('.hover_bkgr_fricc').click(function(){
+        $('.hover_bkgr_fricc').hide();
+    });
+    $('.popupCloseButton').click(function(){
+        $('.hover_bkgr_fricc').hide();
+    });
+});
+</script>
 
 
 
