--- a/public/css/vr.css
+++ b/public/css/vr.css
@@ -1,5 +1,5 @@
 #searchField {
-  width: 500px;
+  width: 300px;
 }
 
 #confirmLogout {
@@ -71,7 +71,7 @@ table{
   border-spacing: 5px;
 }
 
-#tblVRs td{
+#tblVRs td, #tblVRsMobile td{
   width: 100%;
   text-align: left;
   border-radius: 10px;
@@ -80,7 +80,7 @@ table{
   margin: 5px;
 }
 
-#tblVRs td:hover{
+#tblVRs td:hover, #tblVRsMobile td:hover{
   background-color: #ccc;
 }
 
