--- a/views/user.ejs
+++ b/views/user.ejs
@@ -5,9 +5,10 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
+    <script src="https://use.fontawesome.com/releases/v5.0.10/js/all.js"></script>
     <script src="js/user.js"></script>
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="css/user.css">
   </head>
   <body>
@@ -32,42 +33,8 @@
             </div>
             <button type="submit" class="btn btn-default">Submit</button>
           </form>
+          <button type="button" class="btn btn-success" onclick="iOS();">iOS?</button>
           <ul class="nav navbar-nav navbar-right">
-            <!-- TODO: figure out why Login dropdown doesn't work -->
-            <li id="liLogin" class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
-              <ul id="login-dp" class="dropdown-menu">
-                <li>
-                   <div class="row">
-                      <div class="col-md-12">
-                                        
-                         <form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">
-                            <div class="form-group">
-                               <label class="sr-only" for="exampleInputEmail2">Email address</label>
-                               <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Email address" required>
-                            </div>
-                            <div class="form-group">
-                               <label class="sr-only" for="exampleInputPassword2">Password</label>
-                               <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password" required pattern = "[A-Z]{3}[0-9]{4}">
-                                                     <div class="help-block text-right"><a href="">Forget the password ?</a></div>
-                            </div>
-                            <div class="form-group">
-                               <button type="submit" class="btn btn-primary btn-block">Sign in</button>
-                            </div>
-                            <div class="checkbox">
-                               <label>
-                               <input type="checkbox"> keep me logged-in
-                               </label>
-                            </div>
-                         </form>
-                      </div>
-                      <div class="bottom text-center">
-                        New here ? <a href="#"><b>Join Us</b></a>
-                      </div>
-                   </div>
-                </li>
-              </ul>
-            </li>
             <li id="liLogout"><a href="javascript:void(0);" onclick="showLogoutDialog();">Logout</a></li>
           </ul>
         </div>
