--- a/views/vr.ejs
+++ b/views/vr.ejs
@@ -8,7 +8,7 @@
     <script src="https://use.fontawesome.com/releases/v5.0.10/js/all.js"></script>
     <script src="js/vr.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="css/vr.css">
   </head>
   <body>
@@ -33,6 +33,7 @@
             </div>
             <button type="submit" class="btn btn-default">Submit</button>
           </form>
+          <button type="button" class="btn btn-success" onclick="iOS();">iOS?</button>
           <ul class="nav navbar-nav navbar-right">
             <!-- TODO: figure out why Login dropdown doesn't work
             <li id="liLogin" class="dropdown">
@@ -108,9 +109,11 @@
         <div>
           <table id="tblComments"></table>
         </div>
+        <div>
+          <table id="tblVRsMobile"></table>
+        </div>
       </div>
       <div id="col2">
-        <h3>Recently Uploaded VRs</h3>
         <table id="tblVRs"></table>
       </div>
     </div>
