--- a/views/landingpage.ejs
+++ b/views/landingpage.ejs
@@ -13,6 +13,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>   
   <style>
+    p#chatbotText{font-size:14pt;font-weight:500;}
        #map {
         height: 400px;
         width: 100%;
@@ -354,8 +355,9 @@
   </div>
 </div>
 
-
-<a class="trigger_popup_fricc"><button type="button" class="btn btn-success">Chat Bot</button></a>
+<div>
+  <p id="chatbotText">Have a question about our website or about VR?<a class="trigger_popup_fricc"><button type="button" class="btn btn-info">Ask our chat bot!</button></a></p>
+</div>
 
 <div class="hover_bkgr_fricc">
     <span class="helper"></span>
