--- a/views/user.ejs
+++ b/views/user.ejs
@@ -33,7 +33,7 @@
             </div>
             <button type="submit" class="btn btn-default">Submit</button>
           </form>
-          <button type="button" class="btn btn-success" onclick="iOS();">iOS?</button>
+          <!--<button type="button" class="btn btn-success" onclick="iOS();">iOS?</button>-->
           <ul class="nav navbar-nav navbar-right">
             <li id="liLogout"><a href="javascript:void(0);" onclick="showLogoutDialog();">Logout</a></li>
           </ul>
