--- a/views/vr.ejs
+++ b/views/vr.ejs
@@ -33,7 +33,7 @@
             </div>
             <button type="submit" class="btn btn-default">Submit</button>
           </form>
-          <button type="button" class="btn btn-success" onclick="iOS();">iOS?</button>
+          <!--<button type="button" class="btn btn-success" onclick="iOS();">iOS?</button>-->
           <ul class="nav navbar-nav navbar-right">
             <!-- TODO: figure out why Login dropdown doesn't work
             <li id="liLogin" class="dropdown">
