increased support for gltf files

--- a/views/user.ejs
+++ b/views/user.ejs
@@ -61,7 +61,7 @@
           <label for="descriptionInput">VR Description:</label>
           <br/><textarea name="descriptionInput" id="descriptionInput" rows="10" cols="80" form="fileForm"/></textarea>
           <input type="hidden" name="usernameInput" id="usernameInput" /><br/><br/>
-          <label for="fileInput">Choose an image file to upload (supported formats are .jpg and .png)</label>
+          <label for="fileInput">Choose an image file to upload (supported formats are .jpg, .jpeg, .png, and .gltf)</label>
           <br/><input type="file" name="fileInput" id="fileInput" onchange="enableSubmit();"/><br/>
           <input id="fileSubmit" type="submit" value="Upload File" disabled />
         </form>
