--- a/views/vr.ejs
+++ b/views/vr.ejs
@@ -78,11 +78,12 @@
     <div id="row">
       <div id="col1">
         <div id="main">
-          <a-scene embedded>
-            <a-assets>
+          <a-scene id="scene" embedded>
+            <!--<a-assets>
               <img id="sky">
             </a-assets>
-            <a-sky src="#sky"></a-sky>
+            <a-sky src="#sky"></a-sky>-->
+            <a-assets id="assets"></a-assets>
           </a-scene>
         </div>
         <div id="details">
