--- a/views/landingpage.ejs
+++ b/views/landingpage.ejs
@@ -333,9 +333,11 @@
         <p><span class="glyphicon glyphicon-phone"></span> +1 (800) 442–4000</p>
         <p><span class="glyphicon glyphicon-envelope"></span> San_Jose_State_VR.com</p>
       </div>
-   
+      
       <div class="col-sm-7 slideanim">
+        <form action = "/mine" method = "POST">
         <div class="row">
+       
           <div class="col-sm-6 form-group">
             <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
           </div>
@@ -350,10 +352,13 @@
           </div>
 
         </div>
+      </form>
       </div>
     </div>
   </div>
 </div>
+   
+    
 
 <div>
   <p id="chatbotText">Have a question about our website or about VR?<a class="trigger_popup_fricc"><button type="button" class="btn btn-info">Ask our chat bot!</button></a></p>
