--- a/views/landingpage.ejs
+++ b/views/landingpage.ejs
@@ -2,14 +2,14 @@
 <html>
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=GA_TRACKING_ID"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118879724-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-      gtag('config', 'GA_TRACKING_ID');
-    </script>
+    gtag('config', 'UA-118879724-1');
+  </script>
   <title>Virtual Reality</title>
   <meta charset="utf-8">
   <meta name="description" content="Virtual reality website upload download share VR">
